4.0.1:
- Improved: Material You wallpaper variants
- Improved: additional color variant
- Improved: start page layout
- Fixed: crash at start

4.0.0:
- New: completely rewritten and reorganized settings app
- New: "Material You"-inspired wallpaper
- New: Android 12 wallpaper color support (not tested yet, please report related issues on GitHub (doodle-android) if you have Android 12 Beta installed)
- New: translation via Transifex (less than 90 strings to translate, link in About!)
- New: optional shape rotation while zooming
- New: change unlock zoom animation duration
- New: adjust motion damping intensity and movement threshold for tilt effect
- Improved: theme selection and internal wallpaper management
- Improved: RTL layout support
- Fixed: incorrect zoom on lockscreen
- Fixed: non-gesture navigation bar color in dialogs for Android 11 and higher

3.5.1:
- New: option to set tilt sensor refresh rate (useful if tilt caused lags with zoom animations)
- Fixed: skipped frames in zoom animation when unlocking immediately
- Fixed: SET button not disabled if settings app is opened from wallpaper preview

3.5.0:
- New: option for hiding app icon in launcher
- Fixed: annoying shape offset in shape groups when zoomed out
- Fixed: settings reset option

3.4.1:
- Improved: acceleration sensor listener will now only be registered if the option is turned on
- Improved: information and warnings
- Fixed: wallpaper frame jump after switching the tilt sensor option on or off
- Fixed: potential wallpaper crashes

3.4.0:
- New: optional parallax effect when tilting the device
- New: Brazilian Portuguese translation (big thanks to Alexandre!)
- Improved: descriptions of options and information
- Fixed: potential wallpaper and app crashes

3.3.0:
- New: option to force white text with shadow on bright backgrounds
- Improved: haptic feedback in settings only enabled if system vibrations are turned on
- Improved: confirmation of settings reset

3.2.0: